<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:paddingTop="35dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:text="@string/registrationRegisterAccountText"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registrationUsernameHintText"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:startIconDrawable="@drawable/icon_person_black_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegistrationUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLength="15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/registrationFirstnameHintText"
                app:startIconDrawable="@drawable/icon_person_black_24"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegistrationFirstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/registrationLastnameHintText"
                app:startIconDrawable="@drawable/icon_person_black_24"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegistrationLastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/registrationPhoneNumberHintText"
                app:startIconDrawable="@drawable/icon_phone_black_24"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegistrationPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/registrationEmailHintText"
                app:startIconDrawable="@drawable/icon_email_black_24"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegistrationEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/registrationPasswordHintText"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/icon_password_black_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegistrationPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/registrationConfirmPasswordHintText"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/icon_password_black_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegistrationConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    />
            </com.google.android.material.textfield.TextInputLayout>


            <Spinner
                android:id="@+id/spinnerUsertype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registrationRadioMaleText"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registrationRadioFemaleText"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rbOther"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registrationRadioOtherText"
                    android:textSize="17sp"
                    android:textStyle="bold" />


            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/registrationRegisterButtonText" />

        </LinearLayout>


    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvRegistrationLoader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/loaderCardBackground">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/pbRegistrationLoader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:indeterminateTint="@color/lightColorPrimary" />

            <TextView
                android:id="@+id/tvRegistrationLoader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loadingText"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>