<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp">


    <LinearLayout
        android:id="@+id/llTaxiMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTaxiName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/recyclerViewTaxiNameHolderText"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tvTaxiNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/recyclerViewTaxiNumberHolderText"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTaxiAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/recyclerViewTaxiAddressHolderText"
                android:textSize="13sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivPhone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginLeft="10dp"
            android:gravity="right"
            android:src="@drawable/icon_phone_black_24"
            android:text="Abbey Taxis" />
    </LinearLayout>


    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/dTaxi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:dividerThickness="5dp"
        app:layout_constraintTop_toBottomOf="@+id/llTaxiMain" />


</androidx.constraintlayout.widget.ConstraintLayout>